Reorg and fix build issues

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "webpack --env production",
         "dev": "webpack --env development",
-        "server": "node server.js",
+        "server": "node server/index.js",
         "watch": "webpack --env development --watch"
     },
     "repository": {
@@ -66,6 +66,7 @@
         "dotenv": "^8.0.0",
         "draft-js": "^0.10.5",
         "koa": "^2.7.0",
+        "koa-static": "^5.0.0",
         "lodash": "^4.17.11",
         "luxon": "^1.13.1",
         "react": "^16.8.6",
