--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "build": "webpack --env production",
-        "dev": "webpack --env development",
-        "server": "node server/index.js",
-        "watch": "webpack --env development --watch"
+        "build-client": "webpack --env production",
+        "build-server": "babel server/server.js -d dist",
+        "client": "webpack --env development --watch",
+        "migrate": "nodenv --exec sh scripts/migrate.sh",
+        "run-server": "node dist/server.js",
+        "server": "nodemon --exec babel-node server/server.js"
     },
     "repository": {
         "type": "git",
@@ -20,7 +22,9 @@
     },
     "homepage": "https://ferry.fyi",
     "devDependencies": {
+        "@babel/cli": "^7.4.4",
         "@babel/core": "^7.4.4",
+        "@babel/node": "^7.4.5",
         "@babel/plugin-transform-runtime": "^7.4.4",
         "@babel/preset-env": "^7.4.4",
         "@babel/preset-react": "^7.0.0",
@@ -42,7 +46,9 @@
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.7.0",
         "ngrok": "^3",
+        "node-env-run": "^3.0.2",
         "node-sass": "^4.12.0",
+        "nodemon": "^1.19.1",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.17.0",
         "prettier-eslint": "^9.0.0",
@@ -64,6 +70,7 @@
         "@babel/polyfill": "^7.4.4",
         "clsx": "^1.0.4",
         "color-convert": "^2.0.0",
+        "colors": "^1.3.3",
         "dotenv": "^8.0.0",
         "draft-js": "^0.10.5",
         "koa": "^2.7.0",
@@ -74,6 +81,8 @@
         "koa-static": "^5.0.0",
         "lodash": "^4.17.11",
         "luxon": "^1.16.0",
+        "pg": "^7.11.0",
+        "pg-hstore": "^2.3.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
@@ -81,6 +90,9 @@
         "request": "^2.88.0",
         "request-promise": "^4.2.4",
         "scroll-into-view": "^1.9.7",
+        "sequelize": "^5.8.12",
+        "sequelize-cli": "^5.5.0",
+        "sqlite3": "^4.0.9",
         "xml-js": "^1.6.11"
     }
 }
