--- a/server/.babelrc
+++ b/server/.babelrc
@@ -9,7 +9,6 @@
     ]
   ],
   "presets": [
-    ["@babel/preset-env", {"targets": "last 2 version"}],
-    "@babel/preset-react",
+    ["@babel/preset-env", {"targets": {"node": true}}],
   ]
 }
