jk didn't need to do that

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "build-client": "webpack --env production",
+        "heroku-postbuild": "webpack --env production",
         "client": "webpack --env development --watch",
         "migrate": "nodenv --exec sh scripts/migrate.sh",
         "server": "nodemon --exec babel-node server/server.js"
@@ -19,12 +19,11 @@
         "url": "https://github.com/anstosa/ferry.fyi/issues"
     },
     "homepage": "https://ferry.fyi",
-    "dependencies": {
+    "devDependencies": {
         "@babel/cli": "^7.4.4",
         "@babel/core": "^7.4.4",
         "@babel/node": "^7.4.5",
         "@babel/plugin-transform-runtime": "^7.4.4",
-        "@babel/polyfill": "^7.4.4",
         "@babel/preset-env": "^7.4.4",
         "@babel/preset-react": "^7.0.0",
         "@fortawesome/fontawesome-free": "^5.8.2",
@@ -33,12 +32,7 @@
         "babel-loader": "^8.0.5",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-register": "^6.26.0",
-        "clsx": "^1.0.4",
-        "color-convert": "^2.0.0",
-        "colors": "^1.3.3",
         "css-loader": "^3.0.0",
-        "dotenv": "^8.0.0",
-        "draft-js": "^0.10.5",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^5.0.0",
         "eslint-loader": "^2.1.2",
@@ -48,37 +42,17 @@
         "eslint-plugin-sort-imports-es6-autofix": "^0.4.0",
         "file-loader": "^4.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "koa": "^2.7.0",
-        "koa-bodyparser": "^4.2.1",
-        "koa-logger": "^3.2.0",
-        "koa-mount": "^4.0.0",
-        "koa-router": "^7.4.0",
-        "koa-static": "^5.0.0",
-        "lodash": "^4.17.11",
-        "luxon": "^1.16.0",
         "mini-css-extract-plugin": "^0.7.0",
         "ngrok": "^3",
         "node-env-run": "^3.0.2",
         "node-sass": "^4.12.0",
         "nodemon": "^1.19.1",
-        "pg": "^7.11.0",
-        "pg-hstore": "^2.3.3",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.17.0",
         "prettier-eslint": "^9.0.0",
         "prettier-eslint-webpack-plugin": "^0.14.73",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-helmet": "^5.2.1",
         "react-router-dom": "^5.0.0",
-        "react-toastify": "^5.1.0",
-        "request": "^2.88.0",
-        "request-promise": "^4.2.4",
         "sass-loader": "^7.1.0",
-        "scroll-into-view": "^1.9.7",
-        "sequelize": "^5.8.12",
-        "sequelize-cli": "^5.5.0",
-        "sqlite3": "^4.0.9",
         "style-loader": "^0.23.1",
         "stylelint": "^10.0.1",
         "stylelint-config-recommended": "^2.2.0",
@@ -88,7 +62,35 @@
         "webpack": "^4.30.0",
         "webpack-cli": "^3.3.1",
         "webpack-livereload-plugin": "^2.2.0",
-        "webpack-merge": "^4.2.1",
+        "webpack-merge": "^4.2.1"
+    },
+    "dependencies": {
+        "@babel/polyfill": "^7.4.4",
+        "clsx": "^1.0.4",
+        "color-convert": "^2.0.0",
+        "colors": "^1.3.3",
+        "dotenv": "^8.0.0",
+        "draft-js": "^0.10.5",
+        "koa": "^2.7.0",
+        "koa-bodyparser": "^4.2.1",
+        "koa-logger": "^3.2.0",
+        "koa-mount": "^4.0.0",
+        "koa-router": "^7.4.0",
+        "koa-static": "^5.0.0",
+        "lodash": "^4.17.11",
+        "luxon": "^1.16.0",
+        "pg": "^7.11.0",
+        "pg-hstore": "^2.3.3",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-helmet": "^5.2.1",
+        "react-toastify": "^5.1.0",
+        "request": "^2.88.0",
+        "request-promise": "^4.2.4",
+        "scroll-into-view": "^1.9.7",
+        "sequelize": "^5.8.12",
+        "sequelize-cli": "^5.5.0",
+        "sqlite3": "^4.0.9",
         "xml-js": "^1.6.11"
     }
 }
