--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "heroku-postbuild-server": "webpack --env production --config server/webpack.config.js",
         "heroku-web": "node server/dist/server.js",
         "migrate": "nodenv --exec sh scripts/migrate.sh",
-        "server": "nodemon --exec babel-node server/server.js"
+        "server": "nodemon --exec node --require dotenv/config --require @babel/register server/index.js"
     },
     "repository": {
         "type": "git",
@@ -24,29 +24,29 @@
     "homepage": "https://ferry.fyi",
     "devDependencies": {
         "@babel/cli": "^7.4.4",
-        "@babel/core": "^7.4.4",
+        "@babel/core": "^7.4.5",
         "@babel/node": "^7.4.5",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/plugin-transform-runtime": "^7.4.4",
         "@babel/preset-env": "^7.4.4",
         "@babel/preset-react": "^7.0.0",
+        "@babel/register": "^7.0.0",
         "@fortawesome/fontawesome-free": "^5.8.2",
         "autoprefixer": "^9.5.1",
         "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.5",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-register": "^6.26.0",
         "css-loader": "^3.0.0",
         "eslint": "^5.16.0",
-        "eslint-config-prettier": "^5.0.0",
+        "eslint-config-prettier": "^5.1.0",
         "eslint-loader": "^2.1.2",
         "eslint-plugin-babel": "^5.3.0",
         "eslint-plugin-prettier": "^3.0.1",
-        "eslint-plugin-react": "^7.13.0",
+        "eslint-plugin-react": "^7.14.2",
         "eslint-plugin-sort-imports-es6-autofix": "^0.4.0",
         "file-loader": "^4.0.0",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.7.0",
-        "ngrok": "^3",
+        "ngrok": "^3.2.1",
         "node-env-run": "^3.0.2",
         "node-sass": "^4.12.0",
         "nodemon": "^1.19.1",
@@ -62,8 +62,8 @@
         "stylelint-webpack-plugin": "^0.10.5",
         "tailwindcss": "^1.0.1",
         "tailwindcss-aspect-ratio": "^1.0.3",
-        "webpack": "^4.30.0",
-        "webpack-cli": "^3.3.1",
+        "webpack": "^4.35.0",
+        "webpack-cli": "^3.3.5",
         "webpack-livereload-plugin": "^2.2.0",
         "webpack-merge": "^4.2.1",
         "webpack-node-externals": "^1.7.2"
@@ -88,7 +88,7 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
-        "react-toastify": "^5.1.0",
+        "react-toastify": "^5.3.1",
         "request": "^2.88.0",
         "request-promise": "^4.2.4",
         "scroll-into-view": "^1.9.7",
