--- a/server/.babelrc
+++ b/server/.babelrc
@@ -1,6 +1,6 @@
 {
   "plugins": [
-    "transform-class-properties",
+    "@babel/plugin-proposal-class-properties",
     [
       "@babel/plugin-transform-runtime",
       {
@@ -9,6 +9,13 @@
     ]
   ],
   "presets": [
-    ["@babel/preset-env", {"targets": {"node": true}}],
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": true
+        }
+      }
+    ]
   ]
 }
