--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
+        "@fortawesome/fontawesome-pro": "^5.9.0",
         "clsx": "^1.0.4",
         "color-convert": "^2.0.0",
         "colors": "^1.3.3",
