Add basic analytics

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.5",
         "css-loader": "^3.0.0",
+        "dotenv-webpack": "^1.7.0",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^5.1.0",
         "eslint-loader": "^2.1.2",
@@ -54,6 +55,7 @@
         "prettier": "^1.17.0",
         "prettier-eslint": "^9.0.0",
         "prettier-eslint-webpack-plugin": "^0.14.73",
+        "react-ga": "^2.6.0",
         "react-router-dom": "^5.0.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
