--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
+        "worker": "webpack --env development --config client/webpack.service-worker.config.js",
         "client": "webpack --env development --watch --config client/webpack.config.js",
         "heroku-postbuild": "npm run heroku-postbuild-client && npm run heroku-postbuild-server",
         "heroku-postbuild-client": "webpack --env production --config client/webpack.config.js",
@@ -65,11 +66,13 @@
         "stylelint-webpack-plugin": "^0.10.5",
         "tailwindcss": "^1.0.1",
         "tailwindcss-aspect-ratio": "^1.0.3",
+        "webapp-webpack-plugin": "^2.7.1",
         "webpack": "^4.35.0",
         "webpack-cli": "^3.3.5",
         "webpack-livereload-plugin": "^2.2.0",
         "webpack-merge": "^4.2.1",
-        "webpack-node-externals": "^1.7.2"
+        "webpack-node-externals": "^1.7.2",
+        "workbox-webpack-plugin": "^4.3.1"
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
