--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
         "webpack-livereload-plugin": "^2.2.0",
         "webpack-merge": "^4.2.1",
         "webpack-node-externals": "^1.7.2",
-        "workbox-webpack-plugin": "^4.3.1"
+        "workbox-webpack-plugin": "^4.3.1",
+        "workbox-window": "^4.3.1"
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
