--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
+        "aigle": "^1.14.1",
         "clsx": "^1.0.4",
         "color-convert": "^2.0.0",
         "colors": "^1.3.3",
