--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "colors": "^1.3.3",
         "dotenv": "^8.0.0",
         "draft-js": "^0.10.5",
+        "heroku-logger": "^0.3.3",
         "koa": "^2.7.0",
         "koa-bodyparser": "^4.2.1",
         "koa-logger": "^3.2.0",
