--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-        "worker": "webpack --env development --config client/webpack.service-worker.config.js",
+        "service-worker": "webpack --env development --config client/webpack.service-worker.config.js",
         "client": "webpack --env development --watch --config client/webpack.config.js",
         "heroku-postbuild": "npm run heroku-postbuild-client && npm run heroku-postbuild-server",
         "heroku-postbuild-client": "webpack --env production --config client/webpack.config.js",
-        "heroku-postbuild-server": "webpack --env production --config server/webpack.config.js",
-        "heroku-web": "node server/dist/server.js",
+        "heroku-postbuild-web": "webpack --env production --config server/webpack.config.js",
+        "heroku-postbuild-worker": "webpack --env production --config server/webpack.config.js",
+        "heroku-web": "node server/dist/web.js",
+        "heroku-worker": "node server/dist/worker.js",
         "migrate": "nodenv --exec sh scripts/migrate.sh",
-        "server": "nodemon --exec node --require dotenv/config scripts/start.js"
+        "web": "nodemon --exec node --require dotenv/config scripts/web.js",
+        "worker": "nodemon --exec node --require dotenv/config scripts/worker.js"
     },
     "repository": {
         "type": "git",
@@ -78,6 +81,7 @@
     "dependencies": {
         "@babel/polyfill": "^7.4.4",
         "aigle": "^1.14.1",
+        "bull": "^3.10.0",
         "clsx": "^1.0.4",
         "color-convert": "^2.0.0",
         "colors": "^1.3.3",
