--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,7 @@
       "ESNext"
     ],
     "noEmit": false,
-    "module": "CommonJS"
+    "module": "CommonJS",
   },
   "include": ["./**/*"],
   "exclude": []
