--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
   }
 }
