--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "@types/mini-css-extract-plugin": "^0.9.1",
         "@types/node": "^14.11.2",
         "@types/node-fetch": "^2.5.7",
-        "@types/node-sass": "^4.11.1",
         "@types/nodemon": "^1.19.0",
         "@types/pg": "^7.14.5",
         "@types/prettier": "^2.1.1",
@@ -79,7 +78,6 @@
         "mini-css-extract-plugin": "^0.11.3",
         "ngrok": "^3.3.0",
         "node-env-run": "^4.0.2",
-        "node-sass": "^4.14.1",
         "nodemon": "^2.0.4",
         "postcss-loader": "^4.0.3",
         "prettier": "^2.1.2",
@@ -90,6 +88,7 @@
         "react-ga": "^3.1.2",
         "react-router-dom": "^5.2.0",
         "robotstxt-webpack-plugin": "^7.0.0",
+        "sass": "^1.32.8",
         "sass-loader": "^10.0.2",
         "scroll-into-view": "^1.15.0",
         "style-loader": "^1.3.0",
