--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
     "version": "2.0.0",
     "description": "A better tracker for the Washington State Ferry System",
     "scripts": {
-        "build:client": "webpack --env production --config client/webpack.config.ts",
+        "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
         "build:server": "cd server && tsc --build",
-        "client": "webpack --env development --watch --config client/webpack.config.ts",
+        "client": "NODE_ENV=development webpack --watch --config client/webpack.config.ts",
         "heroku": "node ./dist/server/server.js",
         "heroku-postbuild": "npm run build:client && npm run build:server",
+        "lint": "npm run lint:css && npm run lint:js",
+        "lint:fix": "npm run lint:css:fix && npm run lint:js:fix",
+        "lint:css": "npx stylelint \"**/*.scss\"",
+        "lint:css:fix": "npm run lint:css -- --fix",
+        "lint:js": "npx eslint --ext .ts,.tsx client/ server/",
+        "lint:js:fix": "npm run lint:js -- --fix",
         "migrate": "nodenv --exec sh scripts/migrate.sh",
         "server": "cd server && ts-node devServer.ts"
     },
@@ -23,93 +29,95 @@
     "homepage": "https://ferry.fyi",
     "devDependencies": {
         "@types/autoprefixer": "^9.7.2",
-        "@types/color-convert": "^1.9.0",
-        "@types/dotenv-webpack": "^3.0.0",
+        "@types/color-convert": "^2.0.0",
+        "@types/dotenv-webpack": "^7.0.0",
         "@types/draft-js": "^0.10.44",
-        "@types/eslint": "^7.2.3",
+        "@types/eslint": "^7.2.7",
         "@types/eslint-plugin-prettier": "^3.1.0",
         "@types/file-loader": "^4.2.0",
         "@types/heroku-logger": "^1.0.0",
-        "@types/html-webpack-plugin": "^3.2.3",
-        "@types/koa": "^2.11.4",
+        "@types/html-webpack-plugin": "^3.2.4",
+        "@types/koa": "^2.13.1",
         "@types/koa-bodyparser": "^4.3.0",
         "@types/koa-logger": "^3.1.1",
         "@types/koa-mount": "^4.0.0",
         "@types/koa-router": "^7.4.1",
         "@types/koa-static": "^4.0.1",
-        "@types/lodash": "^4.14.161",
-        "@types/luxon": "^1.25.0",
-        "@types/mini-css-extract-plugin": "^0.9.1",
-        "@types/node": "^14.11.2",
-        "@types/node-fetch": "^2.5.7",
+        "@types/lodash": "^4.14.168",
+        "@types/luxon": "^1.26.2",
+        "@types/mini-css-extract-plugin": "^1.2.2",
+        "@types/node": "^14.14.34",
+        "@types/node-fetch": "^2.5.8",
         "@types/nodemon": "^1.19.0",
-        "@types/pg": "^7.14.5",
-        "@types/prettier": "^2.1.1",
-        "@types/react": "^16.9.50",
-        "@types/react-dom": "^16.9.8",
-        "@types/react-router-dom": "^5.1.5",
+        "@types/pg": "^7.14.11",
+        "@types/prettier": "^2.2.2",
+        "@types/react": "^17.0.3",
+        "@types/react-dom": "^17.0.2",
+        "@types/react-router-dom": "^5.1.7",
         "@types/request": "^2.48.5",
-        "@types/request-promise": "^4.1.46",
+        "@types/request-promise": "^4.1.47",
         "@types/scroll-into-view": "^1.6.7",
         "@types/sequelize": "^4.28.9",
         "@types/stylelint": "^9.10.1",
         "@types/stylelint-webpack-plugin": "^2.1.0",
-        "@types/validator": "^13.1.0",
-        "@types/webpack": "^4.41.22",
-        "@types/webpack-dev-server": "^3.11.0",
+        "@types/validator": "^13.1.3",
+        "@types/webpack": "^4.41.26",
+        "@types/webpack-dev-server": "^3.11.2",
+        "@types/webpack-livereload-plugin": "^2.3.0",
         "@types/webpack-merge": "^4.1.5",
         "@types/webpack-node-externals": "^2.5.0",
-        "@types/workbox-webpack-plugin": "^5.1.4",
+        "@types/workbox-webpack-plugin": "^5.1.5",
         "@types/workbox-window": "^4.3.3",
-        "@types/yup": "^0.29.7",
-        "@typescript-eslint/eslint-plugin": "^4.3.0",
-        "@typescript-eslint/parser": "^4.3.0",
-        "autoprefixer": "^9.8.6",
-        "css-loader": "^4.3.0",
-        "dotenv-webpack": "^3.0.0",
-        "eslint": "^7.10.0",
-        "eslint-config-prettier": "^6.12.0",
+        "@types/yup": "^0.29.11",
+        "@typescript-eslint/eslint-plugin": "^4.17.0",
+        "@typescript-eslint/parser": "^4.17.0",
+        "autoprefixer": "^10.2.5",
+        "css-loader": "^5.1.2",
+        "dotenv-webpack": "^7.0.1",
+        "eslint": "^7.22.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-loader": "^4.0.2",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.21.3",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
-        "file-loader": "^6.1.0",
-        "html-webpack-plugin": "^4.5.0",
-        "mini-css-extract-plugin": "^0.11.3",
-        "ngrok": "^3.3.0",
+        "favicons": "^6.2.1",
+        "favicons-webpack-plugin": "^5.0.2",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.3.1",
+        "mini-css-extract-plugin": "^1.3.9",
+        "ngrok": "^3.4.1",
         "node-env-run": "^4.0.2",
-        "nodemon": "^2.0.4",
-        "postcss-loader": "^4.0.3",
-        "prettier": "^2.1.2",
-        "prettier-eslint": "^11.0.0",
+        "nodemon": "^2.0.7",
+        "postcss-loader": "^5.2.0",
+        "prettier": "^2.2.1",
+        "prettier-eslint": "^12.0.0",
         "prettier-eslint-webpack-plugin": "^0.14.73",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-ga": "^3.1.2",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "react-ga": "^3.3.0",
         "react-router-dom": "^5.2.0",
-        "robotstxt-webpack-plugin": "^7.0.0",
         "sass": "^1.32.8",
-        "sass-loader": "^10.0.2",
+        "sass-loader": "^11.0.1",
         "scroll-into-view": "^1.15.0",
-        "style-loader": "^1.3.0",
-        "stylelint": "^13.7.2",
-        "stylelint-config-recommended": "^3.0.0",
-        "stylelint-config-sass-guidelines": "^7.1.0",
+        "style-loader": "^2.0.0",
+        "stylelint": "^13.12.0",
+        "stylelint-config-recommended": "^4.0.0",
+        "stylelint-config-sass-guidelines": "^8.0.0",
         "stylelint-order": "^4.1.0",
-        "stylelint-scss": "^3.18.0",
-        "stylelint-webpack-plugin": "^2.1.0",
-        "tailwindcss": "^1.8.10",
-        "ts-loader": "^8.0.4",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.3",
-        "webapp-webpack-plugin": "^2.7.1",
-        "webpack": "^4.44.2",
-        "webpack-cli": "^3.3.12",
-        "webpack-livereload-plugin": "^2.3.0",
-        "webpack-merge": "^5.1.4",
+        "stylelint-scss": "^3.19.0",
+        "stylelint-webpack-plugin": "^2.1.1",
+        "tailwindcss": "^2.0.3",
+        "ts-loader": "^8.0.18",
+        "ts-node": "^9.1.1",
+        "tsconfig-paths": "^3.9.0",
+        "tsconfig-paths-webpack-plugin": "^3.4.1",
+        "typescript": "^4.2.3",
+        "webpack": "^5.25.0",
+        "webpack-cli": "^4.5.0",
+        "webpack-livereload-plugin": "^3.0.1",
         "webpack-node-externals": "^2.5.2",
-        "workbox-webpack-plugin": "^5.1.4",
-        "workbox-window": "^5.1.4"
+        "workbox-webpack-plugin": "^6.1.1",
+        "workbox-window": "^6.1.1"
     },
     "dependencies": {
         "aigle": "^1.14.1",
@@ -119,19 +127,19 @@
         "dotenv": "^8.2.0",
         "draft-js": "^0.11.7",
         "heroku-logger": "^0.3.3",
-        "koa": "^2.13.0",
+        "koa": "^2.13.1",
         "koa-bodyparser": "^4.3.0",
         "koa-logger": "^3.2.1",
         "koa-mount": "^4.0.0",
-        "koa-router": "^9.4.0",
+        "koa-router": "^10.0.0",
         "koa-static": "^5.0.0",
-        "lodash": "^4.17.20",
-        "luxon": "^1.25.0",
+        "lodash": "^4.17.21",
+        "luxon": "^1.26.0",
         "node-fetch": "^2.6.1",
-        "pg": "^8.3.3",
+        "pg": "^8.5.1",
         "pg-hstore": "^2.3.3",
         "request": "^2.88.2",
-        "sequelize": "^6.3.5",
+        "sequelize": "^6.5.0",
         "sequelize-cli": "^6.2.0"
     }
 }
