--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:js": "npx eslint --ext .ts,.tsx client/ server/",
     "lint:js:fix": "npm run lint:js -- --fix",
     "migrate": "nodenv --exec sh scripts/migrate.sh",
+    "postinstall": "rm -rf node_modules/.cache/webpack",
     "server": "cd server && ts-node devServer.ts"
   },
   "repository": {
@@ -64,8 +65,10 @@
     "@types/sequelize": "^4.28.9",
     "@types/stylelint": "^9.10.1",
     "@types/stylelint-webpack-plugin": "^2.1.0",
+    "@types/terser-webpack-plugin": "^5.0.2",
     "@types/validator": "^13.1.3",
     "@types/webpack": "^4.41.26",
+    "@types/webpack-bundle-analyzer": "^3.9.1",
     "@types/webpack-dev-server": "^3.11.2",
     "@types/webpack-livereload-plugin": "^2.3.0",
     "@types/webpack-merge": "^4.1.5",
@@ -87,6 +90,7 @@
     "favicons": "^6.2.1",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.1",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "ngrok": "^3.4.1",
@@ -111,11 +115,13 @@
     "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "tailwindcss": "^2.0.3",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.4.1",
     "typescript": "^4.2.3",
     "webpack": "^5.25.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-livereload-plugin": "^3.0.1",
     "webpack-node-externals": "^2.5.2",
