--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/koa-logger": "^3.1.1",
     "@types/koa-mount": "^4.0.0",
     "@types/koa-router": "^7.4.1",
+    "@types/koa-sslify": "^4.0.1",
     "@types/koa-static": "^4.0.1",
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
@@ -141,6 +142,7 @@
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-router": "^10.0.0",
+    "koa-sslify": "^4.0.3",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
     "luxon": "^1.26.0",
