--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/autoprefixer": "^9.7.2",
     "@types/color-convert": "^2.0.0",
+    "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/dotenv-webpack": "^7.0.0",
     "@types/draft-js": "^0.10.44",
     "@types/eslint": "^7.2.7",
@@ -81,6 +82,7 @@
     "@typescript-eslint/parser": "^4.17.0",
     "autoprefixer": "^10.2.5",
     "css-loader": "^5.1.2",
+    "css-minimizer-webpack-plugin": "^1.3.0",
     "dotenv-webpack": "^7.0.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
