--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "build:server": "cd server && tsc --build && cp tsconfig.json ../dist/server",
     "client": "NODE_ENV=development webpack --watch --config client/webpack.config.ts",
     "heroku": "cd dist/server && node -r tsconfig-paths/register server.js",
-    "heroku-postbuild": "npm run build:client && npm run build:server",
-    "lint": "npm run lint:css && npm run lint:js",
-    "lint:fix": "npm run lint:css:fix && npm run lint:js:fix",
-    "lint:css": "npx stylelint \"**/*.scss\"",
-    "lint:css:fix": "npm run lint:css -- --fix",
-    "lint:js": "npx eslint --ext .ts,.tsx client/ server/",
-    "lint:js:fix": "npm run lint:js -- --fix",
+    "heroku-postbuild": "yarn build:client && yarn build:server",
+    "lint": "yarn lint:css && yarn lint:js",
+    "lint:fix": "yarn lint:css:fix && yarn lint:js:fix",
+    "lint:css": "stylelint \"**/*.scss\"",
+    "lint:css:fix": "yarn lint:css --fix",
+    "lint:js": "eslint --ext .ts,.tsx client/ server/",
+    "lint:js:fix": "yarn lint:js --fix",
     "migrate": "nodenv --exec sh scripts/migrate.sh",
     "postinstall": "rm -rf node_modules/.cache/webpack",
     "server": "cd server && ts-node devServer.ts"
@@ -33,14 +33,13 @@
   },
   "homepage": "https://ferry.fyi",
   "devDependencies": {
-    "@types/autoprefixer": "^9.7.2",
+    "@types/autoprefixer": "^10.2.0",
     "@types/color-convert": "^2.0.0",
-    "@types/css-minimizer-webpack-plugin": "^1.1.1",
-    "@types/dotenv-webpack": "^7.0.0",
-    "@types/draft-js": "^0.10.44",
+    "@types/css-minimizer-webpack-plugin": "^3.0.2",
+    "@types/draft-js": "^0.11.4",
     "@types/eslint": "^7.2.7",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/file-loader": "^4.2.0",
+    "@types/file-loader": "^5.0.1",
     "@types/heroku-logger": "^1.0.0",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/koa": "^2.13.1",
@@ -52,11 +51,11 @@
     "@types/koa-static": "^4.0.1",
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
-    "@types/mini-css-extract-plugin": "^1.2.2",
-    "@types/node": "^14.14.34",
+    "@types/mini-css-extract-plugin": "^2.0.1",
+    "@types/node": "^16.4.5",
     "@types/node-fetch": "^2.5.8",
     "@types/nodemon": "^1.19.0",
-    "@types/pg": "^7.14.11",
+    "@types/pg": "^8.6.1",
     "@types/prettier": "^2.2.2",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
@@ -65,15 +64,15 @@
     "@types/request-promise": "^4.1.47",
     "@types/scroll-into-view": "^1.6.7",
     "@types/sequelize": "^4.28.9",
-    "@types/stylelint": "^9.10.1",
+    "@types/stylelint": "^13.13.1",
     "@types/stylelint-webpack-plugin": "^2.1.0",
     "@types/terser-webpack-plugin": "^5.0.2",
     "@types/validator": "^13.1.3",
-    "@types/webpack": "^4.41.26",
-    "@types/webpack-bundle-analyzer": "^3.9.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^3.11.2",
     "@types/webpack-livereload-plugin": "^2.3.0",
-    "@types/webpack-merge": "^4.1.5",
+    "@types/webpack-merge": "^5.0.0",
     "@types/webpack-node-externals": "^2.5.0",
     "@types/workbox-webpack-plugin": "^5.1.5",
     "@types/workbox-window": "^4.3.3",
@@ -81,53 +80,52 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "autoprefixer": "^10.2.5",
-    "css-loader": "^5.1.2",
-    "css-minimizer-webpack-plugin": "^1.3.0",
-    "dotenv-webpack": "^7.0.1",
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.5.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "favicons": "^6.2.1",
     "favicons-webpack-plugin": "^5.0.2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.1.1",
     "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.3.9",
-    "ngrok": "^3.4.1",
+    "mini-css-extract-plugin": "^2.1.0",
+    "ngrok": "^4.1.0",
     "node-env-run": "^4.0.2",
     "nodemon": "^2.0.7",
-    "postcss-loader": "^5.2.0",
+    "postcss-loader": "^6.1.1",
     "prettier": "^2.2.1",
-    "prettier-eslint": "^12.0.0",
+    "prettier-eslint": "^13.0.0",
     "prettier-eslint-webpack-plugin": "^0.14.73",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
+    "sass-loader": "^12.1.0",
     "scroll-into-view": "^1.15.0",
-    "style-loader": "^2.0.0",
+    "style-loader": "^3.2.1",
     "stylelint": "^13.12.0",
-    "stylelint-config-recommended": "^4.0.0",
+    "stylelint-config-recommended": "^5.0.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.19.0",
-    "stylelint-webpack-plugin": "^2.1.1",
+    "stylelint-webpack-plugin": "^3.0.1",
     "tailwindcss": "^2.0.3",
     "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
+    "ts-loader": "^9.2.4",
+    "ts-node": "^10.1.0",
     "tsconfig-paths-webpack-plugin": "^3.4.1",
     "typescript": "^4.2.3",
     "webpack": "^5.25.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-livereload-plugin": "^3.0.1",
-    "webpack-node-externals": "^2.5.2",
+    "webpack-node-externals": "^3.0.0",
     "workbox-webpack-plugin": "^6.1.1",
     "workbox-window": "^6.1.1"
   },
@@ -136,7 +134,6 @@
     "clsx": "^1.1.1",
     "color-convert": "^2.0.1",
     "colors": "^1.4.0",
-    "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
     "heroku-logger": "^0.3.3",
     "koa": "^2.13.1",
@@ -144,10 +141,10 @@
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-router": "^10.0.0",
-    "koa-sslify": "^4.0.3",
+    "koa-sslify": "^5.0.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
-    "luxon": "^1.26.0",
+    "luxon": "^2.0.1",
     "node-fetch": "^2.6.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
