--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
     "build:server": "cd server && tsc --build && cp tsconfig.json ../dist/server",
     "client": "NODE_ENV=development webpack --watch --config client/webpack.config.ts",
+    "db:migrate": "sequelize db:migrate",
     "db:reset": "./scripts/resetdb.sh",
-    "db:migrate": "nodenv --exec sh scripts/migrate.sh",
     "db:sync": "curl `heroku pg:backups url --app ferry-fyi` > /tmp/ferryfyi.dump && ./scripts/loaddb.sh /tmp/ferryfyi.dump",
     "heroku": "cd dist/server && node -r tsconfig-paths/register server.js",
     "heroku-postbuild": "yarn build:client && yarn build:server",
@@ -19,8 +19,12 @@
     "lint:css": "stylelint \"**/*.scss\"",
     "lint:css:fix": "yarn lint:css --fix",
     "lint:fix": "yarn lint:css:fix && yarn lint:js:fix",
-    "lint:js": "eslint --ext .ts,.tsx client/ server/",
-    "lint:js:fix": "yarn lint:js --fix",
+    "lint:js": "yarn lint:js:client && yarn lint:js:server",
+    "lint:js:client": "cd client && eslint --ext .ts,.tsx .",
+    "lint:js:client:fix": "yarn lint:js:client --fix",
+    "lint:js:fix": "yarn lint:js:client:fix && yarn lint:js:server:fix",
+    "lint:js:server": "cd server && eslint --ext .ts,.tsx .",
+    "lint:js:server:fix": "yarn lint:js:server --fix",
     "postinstall": "rm -rf node_modules/.cache/webpack",
     "server": "cd server && ts-node devServer.ts",
     "type-check": "yarn type-check:client && yarn type-check:server",
