--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   },
   "description": "A better tracker for the Washington State Ferry System",
   "scripts": {
+    "build": "yarn build:client && yarn build:server",
     "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
     "build:server": "cd server && tsc --build && cp tsconfig.json ../dist/server",
     "client": "NODE_ENV=development webpack --watch --config client/webpack.config.ts",
     "db:migrate": "sequelize db:migrate",
     "db:reset": "./scripts/resetdb.sh",
     "db:sync": "curl `heroku pg:backups url --app ferry-fyi` > /tmp/ferryfyi.dump && ./scripts/loaddb.sh /tmp/ferryfyi.dump",
-    "heroku": "cd dist/server && node -r tsconfig-paths/register server.js",
-    "heroku-postbuild": "yarn build:client && yarn build:server",
+    "heroku": "cd dist/server && node -r tsconfig-paths/register --project tsconfig.json server.js",
+    "heroku-postbuild": "yarn build",
     "lint": "yarn lint:css && yarn lint:js",
     "lint:css": "stylelint \"**/*.scss\"",
     "lint:css:fix": "yarn lint:css --fix",
@@ -29,7 +30,7 @@
     "server": "cd server && ts-node devServer.ts",
     "type-check": "yarn type-check:client && yarn type-check:server",
     "type-check:client": "cd client && tsc --project tsconfig.json --noEmit",
-    "type-check:server": "cd client && tsc --project tsconfig.json --noEmit"
+    "type-check:server": "cd server && tsc --project tsconfig.json --noEmit"
   },
   "repository": {
     "type": "git",
@@ -62,7 +63,7 @@
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
     "@types/mini-css-extract-plugin": "^2.0.1",
-    "@types/node": "^16.4.5",
+    "@types/node": "^16.4.8",
     "@types/node-fetch": "^2.5.8",
     "@types/nodemon": "^1.19.0",
     "@types/pg": "^8.6.1",
@@ -92,7 +93,7 @@
     "autoprefixer": "^10.2.5",
     "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
-    "eslint": "^7.22.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.3.1",
@@ -115,7 +116,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-router-dom": "^5.2.0",
-    "sass": "^1.32.8",
+    "sass": "^1.37.0",
     "sass-loader": "^12.1.0",
     "scroll-into-view": "^1.15.0",
     "style-loader": "^3.2.1",
@@ -131,7 +132,7 @@
     "ts-node": "^10.1.0",
     "tsconfig-paths-webpack-plugin": "^3.4.1",
     "typescript": "^4.2.3",
-    "webpack": "^5.25.0",
+    "webpack": "^5.47.1",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-livereload-plugin": "^3.0.1",
@@ -161,6 +162,6 @@
     "request": "^2.88.2",
     "sequelize": "^6.5.0",
     "sequelize-cli": "^6.2.0",
-    "tsconfig-paths": "^3.9.0"
+    "tsconfig-paths": "^3.10.1"
   }
 }
