Transpile to ES6

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "~/*": ["./*"],
       "shared/*": ["../shared/*"]
-    }
+    },
+    "target": "ES6"
   },
   "include": ["./**/*"],
   "exclude": ["./devServer.ts"]
