--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,5 +11,14 @@
       "shared/*": ["../shared/*"]
     }
   },
-  "include": ["./**/*"]
+  "include": [
+    "./**/*.ts",
+    "./**/*.tsx",
+    "../shared/lib/strings.ts",
+    "../shared/lib/timing.ts",
+    "../shared/lib/objects.ts",
+    "../shared/lib/math.ts",
+    "../shared/lib/identity.ts",
+    "../shared/lib/arrays.ts"
+  ]
 }
