--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,6 @@
     },
     "target": "ES6"
   },
-  "include": ["./typings/*.d.ts", "./**/*.ts", "./**/*.tsx"],
+  "include": ["./**/*.ts", "./**/*.tsx"],
   "exclude": ["./devServer.ts"]
 }
