First party map!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
       "source.fixAll.stylelint": true
     },
     "editor.defaultFormatter": "stylelint.vscode-stylelint"
-  }
+  },
+  "svg.preview.background": "custom"
 }
