--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-webpack-plugin": "^0.14.73",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-router-dom": "^6.0.2",
     "sass": "^1.37.0",
@@ -147,6 +147,7 @@
   },
   "dependencies": {
     "@types/koa-compress": "^4.0.3",
+    "@types/mapbox-gl": "^2.4.2",
     "clsx": "^1.1.1",
     "color-convert": "^2.0.1",
     "colors": "^1.4.0",
@@ -163,6 +164,7 @@
     "koa-static": "^5.0.0",
     "lodash": "^4.17.21",
     "luxon": "^2.0.1",
+    "mapbox-gl": "^2.6.0",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "pg": "^8.5.1",
