--- a/package.json
+++ b/package.json
@@ -120,7 +120,6 @@
     "prettier-eslint-webpack-plugin": "^0.14.73",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
     "react-router-dom": "^6.0.2",
     "sass": "^1.37.0",
     "sass-loader": "^12.1.0",
@@ -173,6 +172,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "react-day-picker": "^7.4.10",
+    "react-ga4": "^1.4.1",
     "react-helmet": "^6.1.0",
     "request": "^2.88.2",
     "sequelize": "^6.5.0",
