--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/file-loader": "^5.0.1",
     "@types/heroku-logger": "^1.0.0",
     "@types/html-webpack-plugin": "^3.2.4",
+    "@types/jsdom": "^16.2.13",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
@@ -150,6 +151,8 @@
     "@types/gtag.js": "^0.0.8",
     "@types/koa-compress": "^4.0.3",
     "@types/mapbox-gl": "^2.4.2",
+    "@zxing/browser": "^0.0.10",
+    "@zxing/library": "^0.18.6",
     "clsx": "^1.1.1",
     "color-convert": "^2.0.1",
     "colors": "^1.4.0",
@@ -157,6 +160,8 @@
     "framer-motion": "^4.1.17",
     "heroku-logger": "^0.3.3",
     "jotai": "^1.4.8",
+    "jsbarcode": "^3.11.5",
+    "jsdom": "^19.0.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.1.0",
