--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
     "build:server": "NODE_ENV=production webpack --config server/webpack.config.ts",
     "clean": "rm -rf dist/*",
-    "client": "webpack serve --config client/webpack.config.ts --progress",
     "db:migrate": "sequelize db:migrate",
     "db:reset": "./scripts/resetdb.sh",
     "db:sync": "curl `heroku pg:backups url --app ferry-fyi` > /tmp/ferryfyi.dump && ./scripts/loaddb.sh /tmp/ferryfyi.dump",
+    "generate:icons": "yarn generate:icons:client && yarn generate:icons:server",
+    "generate:icons:android": "npx cordova-res ios --skip-config --copy",
+    "generate:icons:ios": "npx cordova-res android --skip-config --copy",
     "heroku": "cd dist/server && node server.js",
     "heroku-postbuild": "yarn build",
     "lint": "yarn lint:css && yarn lint:js",
@@ -27,10 +29,13 @@
     "lint:js:server": "cd server && eslint --ext .ts,.tsx .",
     "lint:js:server:fix": "yarn lint:js:server --fix",
     "postinstall": "rm -rf node_modules/.cache/webpack",
-    "server": "cd server && ts-node devServer.ts",
+    "start:client": "webpack serve --config client/webpack.config.ts --progress",
+    "start:android": "npx cap run android",
+    "start:server": "cd server && ts-node devServer.ts",
     "type-check": "yarn type-check:client && yarn type-check:server",
     "type-check:client": "cd client && tsc --project tsconfig.json --noEmit",
-    "type-check:server": "cd server && tsc --project tsconfig.json --noEmit"
+    "type-check:server": "cd server && tsc --project tsconfig.json --noEmit",
+    "watch:client": "webpack --watch --config client/webpack.config.ts --progress"
   },
   "repository": {
     "type": "git",
@@ -63,6 +68,7 @@
     "@types/koa-router": "^7.4.1",
     "@types/koa-sslify": "^4.0.1",
     "@types/koa-static": "^4.0.1",
+    "@types/koa__cors": "^3.1.1",
     "@types/lodash": "^4.14.168",
     "@types/luxon": "^1.26.2",
     "@types/mini-css-extract-plugin": "^2.0.1",
@@ -148,8 +154,17 @@
     "workbox-window": "^6.1.1"
   },
   "dependencies": {
+    "@capacitor-community/barcode-scanner": "^2.0.1",
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor-community/keep-awake": "^2.1.1",
+    "@capacitor-community/screen-brightness": "^1.0.1",
     "@capacitor/android": "^3.4.0",
     "@capacitor/core": "^3.4.0",
+    "@capacitor/device": "^1.1.2",
+    "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/share": "^1.1.1",
+    "@capacitor/status-bar": "^1.0.7",
+    "@koa/cors": "^3.1.0",
     "@types/gtag.js": "^0.0.8",
     "@types/koa-compress": "^4.0.3",
     "@types/mapbox-gl": "^2.4.2",
@@ -175,6 +190,7 @@
     "lodash": "^4.17.21",
     "luxon": "^2.0.1",
     "mapbox-gl": "^2.6.0",
+    "moots-capacitor-dark-mode": "^1.0.1",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "pg": "^8.5.1",
