--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ latest.dump
 android.keystore
 app-release-*
 .gradle/
+
+
+# cordova-res
+resources/android/icon
+resources/android/splash
+resources/ios/icon
+resources/ios/splash
+resources/windows/icon
+resources/windows/splash
