--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,7 +9,15 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-
+    implementation project(':capacitor-community-barcode-scanner')
+    implementation project(':capacitor-community-http')
+    implementation project(':capacitor-community-keep-awake')
+    implementation project(':capacitor-community-screen-brightness')
+    implementation project(':capacitor-device')
+    implementation project(':capacitor-geolocation')
+    implementation project(':capacitor-share')
+    implementation project(':capacitor-status-bar')
+    implementation project(':moots-capacitor-dark-mode')
 
 }
 
