--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "fyi.ferry",
 	"appName": "Ferry FYI",
-	"webDir": "client/static",
+	"webDir": "dist/client",
 	"bundledWebRuntime": false
 }
