--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "A better tracker for the Washington State Ferry System",
   "scripts": {
     "build": "yarn build:client && yarn build:server",
+    "build:android": "NODE_ENV=production BASE_URL=https://ferry.fyi webpack --config client/webpack.config.ts",
     "build:client": "NODE_ENV=production webpack --config client/webpack.config.ts",
     "build:server": "NODE_ENV=production webpack --config server/webpack.config.ts",
     "clean": "rm -rf dist/*",
