Better back button support

--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation project(':capacitor-community-http')
     implementation project(':capacitor-community-keep-awake')
     implementation project(':capacitor-community-screen-brightness')
+    implementation project(':capacitor-app')
     implementation project(':capacitor-device')
     implementation project(':capacitor-geolocation')
     implementation project(':capacitor-share')
