--- a/package.json
+++ b/package.json
@@ -1,10 +1,177 @@
 {
   "name": "ferry.fyi",
-  "version": "2.5.0",
-  "engines": {
-    "node": "^14.17.6"
-  },
   "description": "A better tracker for the Washington State Ferry System",
+  "version": "2.5.0",
+  "author": "Ansel Santosa (ansel@santosa.family)",
+  "bugs": "https://github.com/anstosa/ferry.fyi/issues",
+  "devDependencies": {
+    "@auth0/auth0-react": "^1.9.0",
+    "@capacitor-community/barcode-scanner": "^2.1.0",
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor-community/keep-awake": "^2.1.1",
+    "@capacitor-community/screen-brightness": "^1.0.1",
+    "@capacitor/android": "^3.4.3",
+    "@capacitor/app": "^1.1.1",
+    "@capacitor/cli": "^3.4.3",
+    "@capacitor/core": "^3.4.3",
+    "@capacitor/device": "^1.1.2",
+    "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/share": "^1.1.2",
+    "@capacitor/status-bar": "^1.0.8",
+    "@svgr/webpack": "^6.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/auth0": "^2.34.13",
+    "@types/autoprefixer": "^10.2.0",
+    "@types/color-convert": "^2.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/copy-webpack-plugin": "^10.1.0",
+    "@types/cors": "^2.8.12",
+    "@types/css-minimizer-webpack-plugin": "^3.2.1",
+    "@types/draft-js": "^0.11.9",
+    "@types/eslint": "^8.4.1",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/express-sslify": "^1.2.2",
+    "@types/file-loader": "^5.0.1",
+    "@types/gtag.js": "^0.0.8",
+    "@types/heroku-logger": "^1.0.0",
+    "@types/html-webpack-plugin": "^3.2.4",
+    "@types/jsdom": "^16.2.14",
+    "@types/lodash": "^4.14.179",
+    "@types/luxon": "^2.3.0",
+    "@types/mapbox-gl": "^2.6.3",
+    "@types/mini-css-extract-plugin": "^2.5.1",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.21",
+    "@types/node-fetch": "^2.6.1",
+    "@types/node-schedule": "^1.3.2",
+    "@types/nodemon": "^1.19.0",
+    "@types/pg": "^8.6.4",
+    "@types/prettier": "^2.4.4",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.13",
+    "@types/react-helmet": "^6.1.5",
+    "@types/request": "^2.48.8",
+    "@types/request-promise": "^4.1.47",
+    "@types/scroll-into-view": "^1.6.7",
+    "@types/sequelize": "^4.28.11",
+    "@types/stylelint": "^14.0.0",
+    "@types/stylelint-webpack-plugin": "^2.1.0",
+    "@types/tailwindcss": "^3.0.9",
+    "@types/terser-webpack-plugin": "^5.0.2",
+    "@types/validator": "^13.7.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
+    "@types/webpack-dev-server": "^4.7.2",
+    "@types/webpack-livereload-plugin": "^2.3.0",
+    "@types/webpack-merge": "^5.0.0",
+    "@types/webpack-node-externals": "^2.5.3",
+    "@types/workbox-webpack-plugin": "^5.1.5",
+    "@types/workbox-window": "^4.3.3",
+    "@types/yup": "^0.29.11",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
+    "@zxing/browser": "^0.1.1",
+    "@zxing/library": "^0.19.1",
+    "auth0": "^2.40.0",
+    "autoprefixer": "^10.4.2",
+    "body-parser": "^1.19.2",
+    "clsx": "^1.1.1",
+    "color-convert": "^2.0.1",
+    "colors": "^1.4.0",
+    "compression": "^1.7.4",
+    "copy-webpack-plugin": "^10.2.4",
+    "cors": "^2.8.5",
+    "css-loader": "^6.7.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "draft-js": "^0.11.7",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
+    "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-sslify": "^1.2.0",
+    "favicons": "6",
+    "favicons-webpack-plugin": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.1",
+    "framer-motion": "^6.2.8",
+    "heroku-logger": "^0.3.3",
+    "html-webpack-plugin": "^5.5.0",
+    "http-proxy-middleware": "^2.0.3",
+    "jotai": "^1.6.0",
+    "jsbarcode": "^3.11.5",
+    "jsdom": "^19.0.0",
+    "jwks-rsa": "^2.0.5",
+    "lodash": "^4.17.21",
+    "luxon": "^2.3.1",
+    "mapbox-gl": "^2.7.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "moots-capacitor-dark-mode": "^1.0.2",
+    "morgan": "^1.10.0",
+    "ngrok": "^4.3.1",
+    "node-env-run": "^4.0.2",
+    "node-fetch": "v2",
+    "node-schedule": "^2.1.0",
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.3",
+    "postcss": "^8.4.7",
+    "postcss-loader": "^6.2.1",
+    "postcss-scss": "^4.0.3",
+    "prettier": "^2.5.1",
+    "prettier-eslint": "^13.0.0",
+    "prettier-eslint-webpack-plugin": "^0.14.73",
+    "react": "^17.0.1",
+    "react-day-picker": "^7.4.10",
+    "react-dom": "^17.0.2",
+    "react-ga4": "^1.4.1",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.2.2",
+    "request": "^2.88.2",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "scroll-into-view": "^1.15.0",
+    "sequelize": "^6.17.0",
+    "sequelize-cli": "^6.4.1",
+    "sitemap": "^7.1.1",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.5.3",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-sass-guidelines": "^9.0.1",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.1.0",
+    "stylelint-webpack-plugin": "^3.1.1",
+    "tailwindcss": "^3.0.23",
+    "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.2.7",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-livereload-plugin": "^3.0.1",
+    "webpack-node-externals": "^3.0.0",
+    "workbox-webpack-plugin": "^6.5.1",
+    "workbox-window": "^6.5.1",
+    "zlib": "^1.0.5"
+  },
+  "engines": {
+    "node": "^16.13.1"
+  },
+  "homepage": "https://ferry.fyi",
+  "license": "ISC",
+  "repository": "anstosa/ferry.fyi.git",
   "scripts": {
     "build": "yarn build:client && yarn build:server",
     "build:android": "NODE_ENV=production BASE_URL=https://ferry.fyi webpack --config client/webpack.config.ts",
@@ -13,6 +180,7 @@
     "clean": "rm -rf dist/*",
     "db:migrate": "sequelize db:migrate",
     "db:reset": "./scripts/resetdb.sh",
+    "db:start": "docker run -it --rm -d -p 5432:5432 -e POSTGRES_PASSWORD=testing -e POSTGRES_USER=test --name=ferrydb postgres",
     "db:sync": "curl `heroku pg:backups url --app ferry-fyi` > /tmp/ferryfyi.dump && ./scripts/loaddb.sh /tmp/ferryfyi.dump",
     "generate:icons": "yarn generate:icons:android && yarn generate:icons:ios",
     "generate:icons:android": "npx cordova-res android --icon-background-source '#016f52' --skip-config --copy",
@@ -30,180 +198,12 @@
     "lint:js:server": "cd server && eslint --ext .ts,.tsx .",
     "lint:js:server:fix": "yarn lint:js:server --fix",
     "postinstall": "rm -rf node_modules/.cache/webpack",
-    "start:client": "webpack serve --config client/webpack.config.ts --progress",
     "start:android": "npx cap run android",
+    "start:client": "NODE_ENV=development webpack serve --config client/webpack.config.ts --progress",
     "start:server": "cd server && ts-node devServer.ts",
     "type-check": "yarn type-check:client && yarn type-check:server",
     "type-check:client": "cd client && tsc --project tsconfig.json --noEmit",
     "type-check:server": "cd server && tsc --project tsconfig.json --noEmit",
     "watch:client": "webpack --watch --config client/webpack.config.ts --progress"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anstosa/ferry.fyi.git"
-  },
-  "author": "Ansel Santosa (ansel@santosa.family)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anstosa/ferry.fyi/issues"
-  },
-  "homepage": "https://ferry.fyi",
-  "devDependencies": {
-    "@capacitor/cli": "^3.4.0",
-    "@svgr/webpack": "^5.5.0",
-    "@types/autoprefixer": "^10.2.0",
-    "@types/color-convert": "^2.0.0",
-    "@types/copy-webpack-plugin": "^8.0.1",
-    "@types/css-minimizer-webpack-plugin": "^3.0.2",
-    "@types/draft-js": "^0.11.4",
-    "@types/eslint": "^7.2.7",
-    "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/file-loader": "^5.0.1",
-    "@types/heroku-logger": "^1.0.0",
-    "@types/html-webpack-plugin": "^3.2.4",
-    "@types/jsdom": "^16.2.13",
-    "@types/koa": "^2.13.1",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa-mount": "^4.0.0",
-    "@types/koa-router": "^7.4.1",
-    "@types/koa-sslify": "^4.0.1",
-    "@types/koa-static": "^4.0.1",
-    "@types/koa__cors": "^3.1.1",
-    "@types/lodash": "^4.14.168",
-    "@types/luxon": "^1.26.2",
-    "@types/mini-css-extract-plugin": "^2.0.1",
-    "@types/node": "^16.4.8",
-    "@types/node-fetch": "^2.5.8",
-    "@types/node-schedule": "^1.3.2",
-    "@types/nodemon": "^1.19.0",
-    "@types/pg": "^8.6.1",
-    "@types/prettier": "^2.2.2",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@types/react-helmet": "^6.1.4",
-    "@types/request": "^2.48.5",
-    "@types/request-promise": "^4.1.47",
-    "@types/scroll-into-view": "^1.6.7",
-    "@types/sequelize": "^4.28.9",
-    "@types/stylelint": "^13.13.1",
-    "@types/stylelint-webpack-plugin": "^2.1.0",
-    "@types/tailwindcss": "^2.2.1",
-    "@types/terser-webpack-plugin": "^5.0.2",
-    "@types/validator": "^13.1.3",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@types/webpack-dev-server": "^3.11.2",
-    "@types/webpack-livereload-plugin": "^2.3.0",
-    "@types/webpack-merge": "^5.0.0",
-    "@types/webpack-node-externals": "^2.5.0",
-    "@types/workbox-webpack-plugin": "^5.1.5",
-    "@types/workbox-window": "^4.3.3",
-    "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "autoprefixer": "^10.2.5",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
-    "favicons": "^6.2.1",
-    "favicons-webpack-plugin": "^5.0.2",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.1.1",
-    "html-webpack-plugin": "^5.3.1",
-    "http-proxy-middleware": "^2.0.1",
-    "mini-css-extract-plugin": "^2.1.0",
-    "ngrok": "^4.1.0",
-    "node-env-run": "^4.0.2",
-    "nodemon": "^2.0.7",
-    "postcss-loader": "^6.1.1",
-    "prettier": "^2.2.1",
-    "prettier-eslint": "^13.0.0",
-    "prettier-eslint-webpack-plugin": "^0.14.73",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "sass": "^1.37.0",
-    "sass-loader": "^12.1.0",
-    "scroll-into-view": "^1.15.0",
-    "style-loader": "^3.2.1",
-    "stylelint": "^13.12.0",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0",
-    "stylelint-webpack-plugin": "^3.0.1",
-    "tailwindcss": "^2.0.3",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^9.2.4",
-    "ts-node": "^10.1.0",
-    "tsconfig-paths-webpack-plugin": "^3.4.1",
-    "typescript": "^4.2.3",
-    "webpack": "^5.47.1",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.4.0",
-    "webpack-livereload-plugin": "^3.0.1",
-    "webpack-node-externals": "^3.0.0",
-    "workbox-webpack-plugin": "^6.1.1",
-    "workbox-window": "^6.1.1"
-  },
-  "dependencies": {
-    "@capacitor-community/barcode-scanner": "^2.0.1",
-    "@capacitor-community/http": "^1.4.1",
-    "@capacitor-community/keep-awake": "^2.1.1",
-    "@capacitor-community/screen-brightness": "^1.0.1",
-    "@capacitor/android": "^3.4.0",
-    "@capacitor/app": "^1.1.0",
-    "@capacitor/core": "^3.4.0",
-    "@capacitor/device": "^1.1.2",
-    "@capacitor/geolocation": "^1.3.1",
-    "@capacitor/share": "^1.1.1",
-    "@capacitor/status-bar": "^1.0.7",
-    "@koa/cors": "^3.1.0",
-    "@types/gtag.js": "^0.0.8",
-    "@types/koa-compress": "^4.0.3",
-    "@types/mapbox-gl": "^2.4.2",
-    "@zxing/browser": "^0.0.10",
-    "@zxing/library": "^0.18.6",
-    "clsx": "^1.1.1",
-    "color-convert": "^2.0.1",
-    "colors": "^1.4.0",
-    "draft-js": "^0.11.7",
-    "framer-motion": "^4.1.17",
-    "heroku-logger": "^0.3.3",
-    "jotai": "^1.4.8",
-    "jsbarcode": "^3.11.5",
-    "jsdom": "^19.0.0",
-    "koa": "^2.13.1",
-    "koa-bodyparser": "^4.3.0",
-    "koa-compress": "^5.1.0",
-    "koa-logger": "^3.2.1",
-    "koa-mount": "^4.0.0",
-    "koa-router": "^10.0.0",
-    "koa-sslify": "^5.0.0",
-    "koa-static": "^5.0.0",
-    "lodash": "^4.17.21",
-    "luxon": "^2.0.1",
-    "mapbox-gl": "^2.6.0",
-    "moots-capacitor-dark-mode": "^1.0.1",
-    "node-fetch": "^2.6.7",
-    "node-schedule": "^2.0.0",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "react-day-picker": "^7.4.10",
-    "react-ga4": "^1.4.1",
-    "react-helmet": "^6.1.0",
-    "request": "^2.88.2",
-    "sequelize": "^6.5.0",
-    "sequelize-cli": "^6.2.0",
-    "sitemap": "^7.0.0",
-    "zlib": "^1.0.5"
   }
 }
